refactor(ctrl): containerd uses exchange
This patch makes it so that the containerd `controller` uses an exchange
to publish events about runtime containers. The node controller
subscribes to these events and updates status on the `Task`. This way we
get a more consistent handling of status update.

- Controller: containerd does not use a `ClientSet` anymore
- API: Removed `TaskStatus` and unused types from protobufs
- API: Added Runtime-specific event types that mirror the containerd
  client. This needs to be abstracted.
